--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@google/generative-ai": "^0.1.3",
     "@supabase/supabase-js": "^2.39.0",
-    "axios": "^1.6.0",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.13.2",
+    "cheerio": "^1.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "openai": "^4.20.0",
     "pg": "^8.16.3",
+    "resend": "^3.0.0",
+    "stripe": "^14.10.0",
+    "uuid": "^13.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
